objects/BMCServiceDesk__ReconciliationRule__c.object
<CustomObject>
    <description>To store reconciliation Rules for classes.</description>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <description>To get the Class names.</description>
        <formula>BMCServiceDesk__FKCMDB_Class__r.BMCServiceDesk__Class__c</formula>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To establish the relation with the concerned CMDB Class</description>
        <inlineHelpText>Select the CMDB class for which you want to create a model.</inlineHelpText>
        <label>CMDB Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>Reconciliation Rules</relationshipLabel>
        <relationshipName>Reconciliation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FilterLogic__c</fullName>
        <description>This field stores the specified conditions for the filter logic.</description>
        <inlineHelpText>Enter the values to specify the conditions to set the logical filters.</inlineHelpText>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the reconciliation rule is active or inactive in CMDB</description>
        <inlineHelpText>Select this field if the reconciliation rule is no longer valid. Inactive rules can no longer be applied to CMDB instances.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reconciliation_Criteria__c</fullName>
        <description>To store the fields of Reconciliation rule</description>
        <label>Reconciliation Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Reconciliation Rule</label>
    <nameField>
        <displayFormat>Rule-{00000}</displayFormat>
        <label>Rule#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>